--- a/package.json
+++ b/package.json
@@ -13,13 +13,10 @@
   "devDependencies": {
     "@babel/core": "^7.5.4",
     "@babel/plugin-proposal-class-properties": "^7.5.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.5.0",
     "@babel/plugin-transform-runtime": "^7.5.0",
-    "@babel/plugin-transform-strict-mode": "^7.2.0",
     "@babel/preset-env": "^7.5.4",
     "@babel/runtime": "^7.5.4",
     "babel-plugin-component": "^1.1.1",
-    "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "css-loader": "^3.0.0",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
@@ -32,11 +29,13 @@
   },
   "dependencies": {
     "babel-loader": "^8.0.6",
-    "jquery": "^3.4.1",
     "mint-ui": "^2.2.13",
     "moment": "^2.24.0",
     "vue": "^2.6.10",
+    "vue-preview": "^1.1.3",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.0.7"
+    "vue-router": "^3.0.7",
+    "webpack": "^4.36.1",
+    "webpack-cli": "^3.3.6"
   }
 }
